--- a/sb.html
+++ b/sb.html
@@ -1,85 +1,73 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<title>个人社保计算软件</title>
+		<meta charset="utf-8">
+		<title></title>
+		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		<link rel="stylesheet" href="https://cdn.staticfile.net/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
 		 
 		<!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
 		<script src="https://cdn.staticfile.net/twitter-bootstrap/5.1.1/js/bootstrap.bundle.min.js"></script>
-		
-		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 	</head>
 	<body>
-		<div class="container text-center">
-			<h2>个人社保计算软件-中北大学-段国钰</h2>
-			<table class="table table-bordered text-center">
+		<div class="container">
+			<h2>学生列表</h2>
+			<table  class="table table-bordered text-center table-striped table-hover">
 				<tr>
-					<td>工资</td>
-					<td colspan="3">
-						<input type="text" class="form-control" id="salary" placeholder="请输入工资"/>
+					<td>学号</td>
+					<td>姓名</td>
+					<td>学院</td>
+					<td>籍贯</td>
+					<td>就业单位</td>
+					<td>操作</td>
+				</tr>
+				<tr>
+					<td>202401</td>
+					<td>周</td>
+					<td>软件工程</td>
+					<td>洪都拉斯</td>
+					<td>华为</td>
+					<td>
+						<button class="btn btn-danger btn-custom" type="button">删除</button>
+						<button class="btn btn-warning btn-custom" type="button">修改</button>
+						<a href="" class="btn btn-info">查看详情</a>
 					</td>
-					<td><button class="btn btn-danger" >计算</button></td>
-				</tr>
-				<tr class="bg-primary text-white">
-					<td>险种</td>
-					<td>个人%</td>
-					<td>个人</td>
-					<td>公司%</td>
-					<td>公司</td>
 				</tr>
 				<tr>
-					<td>养老</td>
-					<td>8%</td>
-					<td></td>
-					<td>20%</td>
-					<td></td>
+					<td>202402</td>
+					<td>李</td>
+					<td>计算机学院</td>
+					<td>山西</td>
+					<td>美团</td>
+					<td>
+						<button class="btn btn-danger btn-custom" type="button">删除</button>
+						<button class="btn btn-warning btn-custom" type="button">修改</button>
+						<a href="" class="btn btn-info">查看详情</a>
+					</td>
 				</tr>
 				<tr>
-					<td>医保</td>
-					<td>2%</td>
-					<td></td>
-					<td>6%</td>
-					<td></td>
+					<td>202402</td>
+					<td>李</td>
+					<td>计算机学院</td>
+					<td>山西</td>
+					<td>美团</td>
+					<td>
+						<button class="btn btn-danger btn-custom" type="button">删除</button>
+						<button class="btn btn-warning btn-custom" type="button">修改</button>
+						<a href="" class="btn btn-info">查看详情</a>
+					</td>
 				</tr>
 				<tr>
-					<td>失业</td>
-					<td>0.5%</td>
-					<td></td>
-					<td>1.5%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>工伤</td>
-					<td></td>
-					<td></td>
-					<td>0.5%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>生育</td>
-					<td></td>
-					<td></td>
-					<td>0.8%</td>
-					<td></td>
-				</tr
-				<tr>
-					<td>公积金</td>
-					<td>12%</td>
-					<td></td>
-					<td>12%</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>合计</td>
-					<td>个人合计</td>
-					<td></td>
-					<td>公司合计</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td>总额</td>
-					<td colspan="4"></td>
+					<td>202402</td>
+					<td>李</td>
+					<td>计算机学院</td>
+					<td>山西</td>
+					<td>美团</td>
+					<td>
+						<button class="btn btn-danger btn-custom" type="button">删除</button>
+						<button class="btn btn-warning btn-custom" type="button">修改</button>
+						<a href="" class="btn btn-info">查看详情</a>
+					</td>
 				</tr>
 			</table>
 		</div>
